[package]
name = "olo_rust"
version = "0.2.0"
edition = "2024"

[lib]
name = "olo_rust"
crate-type = ["lib", "cdylib"]

[dependencies]
num-complex = "0.4"
num-traits = "0.2.19"

[dependencies.pyo3]
version = "0.27.1"
optional = true
features = ["extension-module", "num-complex"]  # needed for building Python modules

[features]
default = []
python = ["pyo3"]  # optional feature to enable Python bindings