[package]
name = "oneloop_bridge"
version = "0.2.0"
edition = "2024"

[lib]
name = "oneloop_bridge"
crate-type = ["lib", "cdylib"]

[dependencies]
num-complex = "0.4"
num-traits = "0.2.19"

[dependencies.pyo3]
version = "0.27.1"
optional = true
features = ["extension-module", "num-complex"]

[features]
default = []
python = ["pyo3"]